# nanogui

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  pyproject.toml
.github/workflows/: build.yml  wheels.yml
include/nanogui/: button.h  checkbox.h  chroma.h  colorpass.h  common.h  ema.h  graph.h  label.h  layout.h  metal.h  python.h  renderpass.h  screen.h  shader.h  tabwidget.h  textarea.h  textbox.h  texture.h  theme.h  vector.h  vscrollpanel.h  widget.h  window.h
resources/: bin2c.cmake
src/: button.cpp  canvas.cpp  checkbox.cpp  chroma.cpp  colorpass.cpp  colorwheel.cpp  common.cpp  darwin.mm  example1.cpp  example2.cpp  example4.cpp  example_hdr.cpp  example_icons.cpp  graph.cpp  imagepanel.cpp  imageview.cpp  label.cpp  layout.cpp  messagedialog.cpp  popupbutton.cpp  progressbar.cpp  quad.cpp  renderpass_gl.cpp  rtimer.cpp  rtimer.h  screen.cpp  shader.cpp  shader_gl.cpp  shader_impl.h  shader_metal.mm  slider.cpp  tabwidget.cpp  textarea.cpp  textbox.cpp  texture.cpp  texture_gl.cpp  texture_metal.mm  theme.cpp  traits.cpp  vscrollpanel.cpp  (+2 more)
src/python/: CMakeLists.txt  basics.cpp  button.cpp  canvas.cpp  chroma.cpp  ema.cpp  example1.py  example2.py  example3.py  example_hdr.py  example_icons.py  glfw.cpp  layout.cpp  main.cpp  py_doc.h  python.h  render.cpp  render_test_1.py  render_test_2.py  render_test_3.py  render_test_3_quad.py  render_test_4.py  vector.cpp  widget.cpp
